logs/audit_push_2025-11-30_12h03m31s.txt
======================== 
  File "D:\projetos-inovexa\mindscan\tools\..\auditar_mindscan.py", line 43
    json.dumps(entry, ensure_ascii=False) + "
                                            ^
SyntaxError: unterminated string literal (detected at line 43)

===========================================
Traceback (most recent call last):
  File "D:\projetos-inovexa\mindscan\tools\..\sincronizar_github.py", line 199, in <module>
    executar_pipeline()
  File "D:\projetos-inovexa\mindscan\tools\..\sincronizar_github.py", line 185, in executar_pipeline
    print("   \U0001f680 FULL ORCHESTRATOR – MindScan (Início)")
  File "C:\Program Files\Python312\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' codec can't encode character '\U0001f680' in position 3: character maps to <undefined>
fatal: The current branch main has no upstream branch.
To push the current branch and set the remote as upstream, use

    git push --set-upstream origin main

To have this happen automatically for branches without a tracking
upstream, see 'push.autoSetupRemote' in 'git help config'.

